--- a/src/Veeam.Signature.UnitTests/Veeam.Signature.UnitTests.csproj
+++ b/src/Veeam.Signature.UnitTests/Veeam.Signature.UnitTests.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solution\BlockSequenceMonitorTests.cs" />
     <Compile Include="Solution\Sha256HashCalculatorTests.cs" />
     <Compile Include="Solution\StreamDataProviderTests.cs" />
     <Compile Include="Solution\SubStreamForSha256AlgTests.cs" />
